--- a/style.css
+++ b/style.css
@@ -125,6 +125,18 @@ input::-webkit-inner-spin-button {
 
 }
 
+.voltar{
+	position:relative;
+	left: -20%;
+	top:30%;
+	background-color: rgb(55, 42, 112);
+	border-radius: 10%;
+	padding: 2% 5%;
+
+}
+
+
+
 .enviar-texto{
 	color: white;
 	padding: 2% 5%;
@@ -135,6 +147,9 @@ input::-webkit-inner-spin-button {
 
 .textodados{
 	display:inline-block;
+	height: 25px;
+	width: 300px;
+	margin: 5px 5px 15px 0;
 }
 
 .form-group{
